# Easy-Factor-Graph-GUI

./: .gitignore  .gitmodules  CMakeLists.txt  EFG-GUI.html  EFG-GUI.js  README.md
App/: EFG-GUI
JS/: Interface.js
JS-efg-addon/: CMakeLists.txt  efgAddon.h  package.json
JS-efg-addon/src/: Command.cpp  Command.h  JSONstream.cpp  JSONstream.h  VariableFinder.cpp  VariableFinder.h  efgAddon.cc
doc/: Requests.xls
src/: CMakeLists.txt  EFG-GUI.cpp  EFG-GUI.html
src/EFG-GUI/: CMakeLists.txt  EFG-GUI.html
src/EFG-GUI/header/: GraphShell.h
src/EFG-GUI/src/: GraphShell.cpp
src/JS/: Interface.js
src/src/: EFG-model.cpp  EFG-model.h  VariableFinder.cpp
