CollectSourceFiles(${CMAKE_CURRENT_SOURCE_DIR} SOURCES)
GroupSources(${CMAKE_CURRENT_SOURCE_DIR})

add_executable(EFG-GUI ${SOURCES})

target_include_directories(EFG-GUI 
PUBLIC 
${CMAKE_CURRENT_SOURCE_DIR}/header
)

target_link_libraries(EFG-GUI 
PUBLIC
Http-GUI
EFG
)

target_compile_definitions(EFG-GUI 
PUBLIC
	-D SOURCE_FOLDER="${CMAKE_CURRENT_SOURCE_DIR}/"
)

install(TARGETS EFG-GUI)
install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/JS/ DESTINATION bin/JS)
install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/image/ DESTINATION bin/image)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/EFG-GUI.html DESTINATION bin/)
